--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
-    "@types/node": "^20.10.4",
-    "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "aos": "^3.0.0-beta.6",
     "next": "^14.0.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "typescript": "^5.3.3"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
+    "@types/node": "20.14.12",
+    "@types/react": "18.3.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
-  }
+    "tailwindcss": "^3.3.6",
+    "typescript": "5.5.4"
+  },
+  "packageManager": "yarn@4.3.1"
 }
