--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,5 @@ jobs:
         script: |
           cd /data/www/www.readtheone
           git pull
+          yarn build
           sudo supervisorctl restart www.readtheone:
